<resources>
    <string name="app_name">POE_PT2_OPSC</string>
    <string name="title_Overview">Overview</string>
    <string name="title_Analytics">Analytics</string>
    <string name="title_Add">Add</string>
    <string name="title_Report">Report</string>
    <string name="title_Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_landing_page">Overview</string>
</resources>